# rust_api

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  PLAN_SCHEMA_REFACTOR.md  README.md  docker-compose.yml  firewall-setup.sh  postgress_backup.sql
blazing_sun/: .env.example  =  CLAUDE.md  Cargo.toml  README.md
blazing_sun/.sqlx/: query-0037d352a0c20695c4d277619222e274d795c1c87705b30db3393a42a44d6e2d.json  query-0051d10d18be6a884188997950e7822b222b034b301eaf88ee77c84394fe21ea.json  query-008ffc30162e18e626e02e5d0e328d61e86c2d6400479e14ab75d4a3180eea36.json  query-00a9261b3e5aac332a1ea0275c9c38283bc1a5129f09ebcdd3dd5e546b6842c4.json  query-00ceecb0c33ba07f7b9ca20d07b478d5a62e3be66bdc2f70abc8de8ca631ded0.json  query-01479eba1970bee3692b6f7c80c64edceb707d7b17ced4af3c7a4024ccc2b965.json  query-0258d7e038f24c4da243e9da614b1462745f221c9dba5da663a3a5033969dea8.json  query-02994c9edf078caf624acc9ab7cd5ea030d38a42ba6e74589d43a46bbec73ceb.json  query-0428c83c95fc2dcb118460f2bf516ecfec4ac06db8ee62c385427a5e3553a2e8.json  query-0473951bffeb8cbf0756ee8ddb8d97b24bd24e4a37581e43e4693a2db9bfdec7.json  query-04bf79ea93a8258cb5b1865cd2cd9f3a679dec44e67944c69135ac7b0dcb62a4.json  query-04fae4e7c3b0fc353eb0db669c615f66ff82abe6b23606615fc695be9aaa70a2.json  query-0515f415d57422048a649d463a167c74ff8d4ccad97b6f76e888c526a6051624.json  query-0573e3eb77d43cf4107e64b475ea6c0a764ff4a17bb26a6820581ebfe3bc5a84.json  query-05afad3d652c7e2a6f0a4de3f2be6a4d25adbb9ce6ff8030af6a8d37aa86d9a8.json  query-06dfc46bb0e236335fabd76ee7e8a54bc31ee18fbf69baf3a71d942e0d6a8906.json  query-075d120408d90c9fe3a9a66630a70f1c1c5300ebe1e83d8d15cfaa733af6716a.json  query-0779136c0a5cc17d017935f52d336f9e2e881a909be4ac5d2a7cf901db526ee6.json  query-078f2d2e7942c2bea1e51622c506d0d9c53730be0c5af6f2cb0d809802c25f73.json  query-07e4a6c2948416ba997f1c596afe94752bbd8a1f800f76bde3c59dcfd1b5e75a.json  query-08a35677ae3a37edf793a543eb1821eaaa1949b55fa7cd8969a1349449c48ce9.json  query-090adae281c191b2daf9f3a8354ad5fae506afa7419cac9cca87077dbebac061.json  query-09752c3873271975fb7d5b8a28a10596e85609cb42872c255d086e17e67594ec.json  query-098c44865ed71ab33a473ec31232613cf2a7883c4e3efa25bf912abfeab2db27.json  query-0a072a541e7a2fb2ad9890e095a2a32805a7218b0065a9f8adb3a1957f7fda5d.json  query-0ae6b04d0ede5d5b77e9d9b5533912696eef0c7ccece1848b57b18d3c2a42107.json  query-0b300451ec94ba1a7768b851e71e1bb9564bb71cdb4c2d19c2b11725a1f90171.json  query-0b40d0b4adb99ed5051643c70e0f5ff0153b19b2dc502e2990baf05e32175d64.json  query-0c0a1285b7510e90a9c32f3bcdd5b63081dd3f58a5af43e0f5d3c1dbc91c5ffb.json  query-0c1d3c7008415195c2283ae8ed6d9c6b0a80a62c79e8cef302bed5b3f325b14d.json  query-0d1c78e825940e9366bbaf19529434af9c98d073eddce34d37fd3ccd905eb833.json  query-0dec9c1df26caec5dc10a6d2d723bcce9b298d0095d7e270bc37cdf2d9c23ee9.json  query-0e11a544417e89c8e8bcc90453a59467621f4c7f9e894bc432ab515d9ed9e5ac.json  query-0e19231cd2c9cdcf99862cbd2e2e7092c266ffab1e67553ff1c3a8c9a7065485.json  query-0e44f12a23a0a21f301d2114b90550071c9b5d4cd21d59f88438fc6cdbd5c119.json  query-0e7b463ed3b4a2bf6b74a755b98c9a4c09d78c599b055a3b82448770df058ea9.json  query-0e925370a5c0823c2034d117b51bde1aa06c843490c1ef0a331164edb2d7f362.json  query-0f04dc96079380ad0bb14e8fab0d8f438249d776d9665685d5ffab94477ab317.json  query-0f43b42a9be550210a39f316a548afe0ac95988d4cd3fcb672159e8eebde230e.json  query-0f9603ef269222ad2b309505370f2508354c6c199e200284424661cd73169395.json  (+446 more)
blazing_sun/CLAUDE_partials/: 01-overview.md  02-project-structure.md  03-modules.md  04-configuration.md  05-database-queries.md  06-event-driven.md  07-rabbitmq-jobs.md  08-storage-system.md  09-api-endpoints.md  10-admin-theme.md  11-named-routes.md  12-database-schema.md  13-adding-features.md  14-development.md  15-important-notes.md  README.md
blazing_sun/bonusfinder-mini-games/: bonusfinder-mini-games.php
blazing_sun/keys/: jwt_private.pem  jwt_public.pem
blazing_sun/migrations/: 20251217202253_create_users_table.sql  20251217204134_create_transactions_table.sql  20251224120000_create_uploads_table.sql  20251228220214_add_avatar_uuid_to_users.sql  20251228225212_add_permissions_to_users.sql  20251228225316_update_avatar_to_assets.sql  20251230181208_create_site_config_table.sql  20251231011123_create_page_seo_table.sql  20251231142000_remove_site_name_description.sql  20251231143141_add_show_site_name_field.sql  20251231151416_add_identity_branding_fields.sql  20251231160000_create_page_schemas_table.sql  20251231160100_create_page_hreflangs_table.sql  20260101194945_add_title_to_uploads.sql  20260101220000_create_image_variants_table.sql  20260102030000_add_id_based_asset_references.sql  20260102030100_create_galleries_and_pictures.sql  20260102131605_populate_id_references.sql  20260102174543_add_cover_image_to_galleries.sql  20260102200000_add_metadata_to_activation_hashes.sql  (+38 more)
checkout/: Cargo.toml  Dockerfile  entrypoint.sh
money_flow/: .env.example  .ignore  CLAUDE.md  Cargo.toml  README.md
ws_gateway/: .env.example  CLAUDE.md  Cargo.toml  Dockerfile  entrypoint.sh
(+981 files in other folders)
