[package]
name = "blazing_sun"
version = "0.1.0"
edition = "2021"
[dependencies]
actix-web = "4"
bcrypt = "0.17.1"
dotenv = "0.15.0"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio", # async runtime
    "tls-rustls",    # SSL/TLS support
    "postgres",      # PostgreSQL driver
    "macros",        # compile-time checked queries
    "uuid",          # UUID support
    "chrono",        # datetime support
    "migrate",       # migrations
] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
actix-cors = "0.7"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
chrono = { version = "0.4.42", features = ["clock", "serde"] }
serde_json = "1.0.145"
validator = { version = "0.20", features = ["derive"] }
regex = "1"
tokio-cron-scheduler = "0.13"
lapin = "2.3"
futures = "0.3"
futures-lite = "2.3"
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "tokio"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
actix-session = { version = "0.10", features = ["redis-session-rustls"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
async-trait = "0.1"
once_cell = "1.20"
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "smtp-transport"] }
tera = "1.20"
rand = "0.8"
base64 = "0.22"
actix-files = "0.6.9"
actix-multipart = "0.7"
tokio-util = { version = "0.7", features = ["io"] }
mime_guess = "2.0"
sha2 = "0.10"
hex = "0.4"
mongodb = "3.1"
thiserror = "1.0"
image = { version = "0.25", features = ["jpeg", "png", "webp", "avif"] }
rsa = "0.9"
urlencoding = "2.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
[dev-dependencies]
actix-rt = "2"
tabled = "0.17"
[profile.dev.package.sqlx-macros]
opt-level = 3
