[package]
name = "checkout"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
hex = "0.4"
hmac = "0.12"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
once_cell = "1.20"
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.10", features = ["v4"] }
