[package]
name = "money_flow"
version = "0.1.0"
edition = "2024"
[dependencies]
actix-web = "4"
bcrypt = "0.17.1"
dotenv = "0.15.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8", features = [
    "runtime-tokio", # async runtime
    "tls-rustls",    # SSL/TLS support
    "postgres",      # PostgreSQL driver
    "macros",        # compile-time checked queries
    "uuid",          # UUID support
    "chrono",        # datetime support
    "migrate",       # migrations
] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
actix-cors = "0.7"
[dev-dependencies]
actix-rt = "2"
[profile.dev.package.sqlx-macros]
opt-level = 3
