[package]
name = "ws_gateway"
version = "0.1.0"
edition = "2021"
description = "WebSocket Gateway for Blazing Sun real-time communication"
authors = ["Blazing Sun Team"]

[dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "tokio"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "aio"] }

# JWT Authentication
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID for event/connection IDs
uuid = { version = "1.11", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
dotenv = "0.15"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Concurrent collections
dashmap = "6.0"

# Graceful shutdown
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
